--- a/css/exercises/styles.css
+++ b/css/exercises/styles.css
@@ -1,1 +1,30 @@
-/* Start adding your styling below! */ 
+/* Start adding your styling below! */
+
+body {
+    background-color: yellow;
+
+}
+
+p {
+    color: green;
+}
+
+h1 {
+    font-size: 36;
+}
+
+div {
+    text-align: center;
+}
+
+.headers {
+    text-align: center;
+}
+
+#cool-text {
+    color: blue;
+}
+
+#listed {
+    color: red;
+}
